habis latihan sampe div

--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>judul</title>
 </head>
 <body>
-    text v2
-</body>
+     <h1>text v2 a</h1>
+     <h2>heading 2 gw coba di sini</h2>
+     <p>paragraf <i>Lorem</i>  ipsum dolor sit amet consectetur adipisicing elit. Illum minima harum aperiam sapiente blanditiis. Quisquam quae iste temporibus eligendi voluptatum at et non facilis iusto ratione, ad animi tempora dolor?</p>
+     <p></p>
+     <p>1123</p>
+ 
+     <button>1231</button>
+  
+     <b>cetak tebal</b>
+     <div>
+         <b>cetak tebal</b>
+    </div>
+    
+    </body>
 </html>
