--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
      <div>
          <b>cetak tebal</b>
     </div>
-    
+    <a href="dashboard.html" target="_blank">dashboard</a>
     </body>
 </html>
