sampe pembelajaran ul ol dan li

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
      <div>
          <b>cetak tebal</b>
     </div>
-    <a href="dashboard.html" target="_blank">dashboard</a>
+    <a href="dashboard.html" target="_blank">dashboard tapi dibuka di tab baru</a>
+    <div>
+        <a href="/dashboard.html">dashboard with div</a>
+    </div>
     </body>
 </html>
