Sudah resmi menamatkan HTML

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     </div>
     <a href="dashboard.html" target="_blank">dashboard tapi dibuka di tab baru</a>
     <div>
-        <a href="/dashboard.html">dashboard with div</a>
+        <a href="./Test/dashboard.html">dashboard with div</a>
+    </div>
+    <div>
+        <a href="login.html">Tempat Login</a>
     </div>
     </body>
 </html>
